--- a/system/automation/n8n/k8s/kustomization.yaml
+++ b/system/automation/n8n/k8s/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - service.yaml
   - configmap.yaml
   - pvc.yaml
-  - workflows-pvc.yaml
+  # - workflows-pvc.yaml
   # - gateway.yaml
   # - http-route.yaml
 
@@ -15,10 +15,11 @@ configMapGenerator:
   - name: workflows-cm
     files:
       - srOnR8PAY3u4RSwb.json=workflows/demo-workflow.json
+      - srOnR8PAY3u4RSrb.json=workflows/backup-workflows.json
   - name: credentials-cm
     files:
-      - srOnR8PAY3u4RSwb.json=credentials/ollama.json
-      - sFfERYppMeBnFNeA.json=credentials/qdrant.json
+      - sFfERYppMeBnFNeA.json=credentials/ollama.json
+      - sFfERYppMeBnFNeB.json=credentials/qdrant.json
 
 generatorOptions:
   disableNameSuffixHash: true
