--- a/tf_modules/talos_cluster/manifests/schematic-nvidia.yaml
+++ b/tf_modules/talos_cluster/manifests/schematic-nvidia.yaml
@@ -1,6 +1,9 @@
 customization:
+  extraKernelArgs:
+    - net.ifnames=0
   systemExtensions:
     officialExtensions:
+      - siderolabs/intel-ucode
       - siderolabs/qemu-guest-agent
       - siderolabs/nvidia-container-toolkit-production
       - siderolabs/nonfree-kmod-nvidia-production
