--- a/kubernetes/apps/kube-system/kubelet-csr-approver/values.yaml
+++ b/kubernetes/apps/kube-system/kubelet-csr-approver/values.yaml
@@ -1,3 +1,3 @@
 ---
-providerRegex: ^(mlops-ctrl-00|mlops-work-00)$
+providerRegex: ^(mlops-ctrl-00|mlops-work-00|mlops-work-01)$
 bypassDnsResolution: true
