--- a/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
+++ b/kubernetes/helmfile.d/01-bootstrap.gotmpl.yaml
@@ -9,8 +9,6 @@ repositories:
     url: https://coredns.github.io/helm
   - name: postfinance
     url: https://postfinance.github.io/kubelet-csr-approver
-  - name: nvidia
-    url: https://nvidia.github.io/k8s-device-plugin
 
 releases:
   - name: prometheus-operator-crds
@@ -28,31 +26,21 @@ releases:
       - ../apps/kube-system/cilium/values.yaml
     needs:
       - observability/prometheus-operator-crds
-    # hooks:
-    #   - events: ["presync"]
-    #     showlogs: true
-    #     command: "kubectl"
-    #     args:
-    #       - apply
-    #       - -f
-    #       - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/standard/gateway.networking.k8s.io_gatewayclasses.yaml
-    #       - -f
-    #       - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/experimental/gateway.networking.k8s.io_gateways.yaml
-    #       - -f
-    #       - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/standard/gateway.networking.k8s.io_httproutes.yaml
-    #       - -f
-    #       - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/standard/gateway.networking.k8s.io_referencegrants.yaml
-    #       - -f
-    #       - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/standard/gateway.networking.k8s.io_grpcroutes.yaml
-    #       - -f
-    #       - https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/v1.1.0/config/crd/experimental/gateway.networking.k8s.io_tlsroutes.yaml
-    #   - events: ["postsync"]
-    #     showlogs: true
-    #     command: "bash"
-    #     args:
-    #       - -c
-    #       - |
-    #         kustomize build --enable-exec --enable-helm ../apps/kube-system/cilium | kubectl apply -f -
+    hooks:
+      - events: ["presync"]
+        showlogs: true
+        command: "kubectl"
+        args:
+          - apply
+          - -f
+          - https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.1.0/standard-install.yaml
+      - events: ["postsync"]
+        showlogs: true
+        command: "bash"
+        args:
+          - -c
+          - |
+            kustomize build --enable-exec --enable-helm ../apps/kube-system/cilium | kubectl apply -f -
 
   - name: coredns
     namespace: kube-system
@@ -88,19 +76,4 @@ releases:
       - kube-system/cilium
       - kube-system/coredns
       - kube-system/kubelet-csr-approver
-
-  - name: nvidia-device-plugin
-    namespace: kube-system
-    chart: nvidia/nvidia-device-plugin
-    version: 0.17.0
-    values:
-      - runtimeClassName: nvidia
-    hooks:
-      - events: ["postsync"]
-        showlogs: true
-        command: "bash"
-        args:
-          - -c
-          - |
-            kustomize build --enable-exec --enable-helm ../apps/kube-system/nvidia | kubectl apply -f -
-      
+  
