--- a/platform/ai/k8s/namespace.yaml
+++ b/platform/ai/k8s/namespace.yaml
@@ -4,4 +4,4 @@ kind: Namespace
 metadata:
   name: ai
   labels:
-    pod-security.kubernetes.io/enforce: baseline
+    pod-security.kubernetes.io/enforce: privileged
