--- a/platform/ai/k8s/openwebui-values.yaml
+++ b/platform/ai/k8s/openwebui-values.yaml
@@ -1,45 +1,28 @@
 ---
 ollama:
-  enabled: true
-  gpu:
-    enabled: true
-    type: 'nvidia'
-    number: 1
-  models:
-    - llama3
-    - codellama
-  runtimeClassName: nvidia
-  securityContext:
-    allowPrivilegeEscalation: false
-    capabilities:
-      drop:
-        - ALL
-    runAsNonRoot: true
-    seccompProfile:
-      type: RuntimeDefault
-  resources:
-    requests:
-      cpu: 200m
-      memory: 1Gi
-      nvidia.com/gpu: 1
-    limits:
-      memory: 8Gi
-      nvidia.com/gpu: 1
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-          - matchExpressions:
-              - key: feature.node.kubernetes.io/pci-0300_10de.present
-                operator: In
-                values:
-                  - "true"
+  enabled: false
+
+podSecurityContext:
+  fsGroupChangePolicy: Always
+  fsGroup: 1001
+containerSecurityContext:
+  runAsUser: 1001
+  runAsGroup: 1001
+  runAsNonRoot: true
+  privileged: false
+  allowPrivilegeEscalation: false
+  readOnlyRootFilesystem: false
+  capabilities: { drop: ["ALL"] }
+  seccompProfile: { type: RuntimeDefault }
 persistence:
   enabled: true
   # existingClaim: open-webui
 pipelines:
   enabled: false
 ollamaUrls: ["http://ollama.ai.svc.cluster.local:11434"]
+extraEnvVars:
+  - name: WEBUI_SECRET_KEY
+    value: "key"
 # ingress:
 #   enabled: true
 #   class: "nginx"
