--- a/kubernetes/apps/kube-system/nvidia/daemonset.yaml
+++ b/kubernetes/apps/kube-system/nvidia/daemonset.yaml
@@ -12,20 +12,24 @@ spec:
       initContainers:
         - name: nvidia-device-plugin-init
           image: nvcr.io/nvidia/k8s-device-plugin:v0.17.0
-          resources:
-            limits:
-              cpu: 150m
-              memory: 512Mi
-            requests:
-              cpu: 150m
-              memory: 256Mi
+          securityContext:
+            privileged: true
+          # resources:
+          #   limits:
+          #     cpu: 150m
+          #     memory: 512Mi
+          #   requests:
+          #     cpu: 150m
+          #     memory: 256Mi
       containers:
         - name: nvidia-device-plugin-sidecar
           image: nvcr.io/nvidia/k8s-device-plugin:v0.17.0
-          resources:
-            limits:
-              cpu: 150m
-              memory: 512Mi
-            requests:
-              cpu: 150m
-              memory: 256Mi
+          securityContext:
+            privileged: true
+          # resources:
+          #   limits:
+          #     cpu: 150m
+          #     memory: 512Mi
+          #   requests:
+          #     cpu: 150m
+          #     memory: 256Mi
