--- a/kubernetes/helmfile.d/03-devices.gotmpl.yaml
+++ b/kubernetes/helmfile.d/03-devices.gotmpl.yaml
@@ -5,8 +5,6 @@ bases:
 repositories:
   - name: nfd
     url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
-  - name: intel
-    url: https://intel.github.io/helm-charts/
   - name: nvidia
     url: https://nvidia.github.io/k8s-device-plugin
 
@@ -15,35 +13,19 @@ releases:
     chart: nfd/node-feature-discovery
     version: 0.17.1
     namespace: kube-system
-    
-  - name: intel-device-plugins-operator
-    chart: intel/intel-device-plugins-operator
-    version: 0.30.0
-    namespace: kube-system
-    needs:
-      - kube-system/node-feature-discovery
-
-  - name: intel-device-plugins-gpu
-    chart: intel/intel-device-plugins-gpu
-    version: 0.30.0
-    namespace: kube-system
-    # disableValidationOnInstall: true
-    needs:
-      - kube-system/node-feature-discovery
-      - kube-system/intel-device-plugins-operator
-    values:
-      - sharedDevNum: 3
-        nodeFeatureRule: false
   
   - name: nvidia-device-plugin
     namespace: kube-system
     chart: nvidia/nvidia-device-plugin
-    version: 0.17.0
+    version: 0.16.2
     needs:
       - kube-system/node-feature-discovery
-      - kube-system/intel-device-plugins-operator
     values:
-      - ../apps/kube-system/nvidia/helm-values.yaml
+      - runtimeClassName: nvidia
+      - devicePlugin:
+          enabled: true
+        gfd:
+          enabled: true
     hooks:
       - events: ["postsync"]
         showlogs: true
