--- a/kubernetes/helmfile.d/03-devices.gotmpl.yaml
+++ b/kubernetes/helmfile.d/03-devices.gotmpl.yaml
@@ -26,6 +26,8 @@ releases:
           enabled: true
         gfd:
           enabled: true
+        nfd:
+          enabled: false
     hooks:
       - events: ["postsync"]
         showlogs: true
