--- a/platform/automation/k8s/n8n/secrets.yaml
+++ b/platform/automation/k8s/n8n/secrets.yaml
@@ -2,27 +2,25 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: n8n-secrets
-    namespace: ollama
-    labels:
-        version: v1.0
+    namespace: automation
 type: Opaque
 data:
-    #ENC[AES256_GCM,data:CKE51Sw0klVDqLQOZ5P6A5KyzMF4u7LzAnQ=,iv:iUUwcEX4gMWLQTWzgOANx6ee9GUEV3aADNZEgxO4qIw=,tag:xlJSHhdiVU5kqsQUqPSrLA==,type:comment]
-    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:HSDoM5eyCWD34US728JUM313SfgOgCia,iv:h0lC3ZY6eam7CkwkeDjpoTv+7P7dV+q6Lc0yaOXo7kY=,tag:o+F6Sad3vjO3LCgVI/i3jw==,type:str]
-    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:Xr7cb2Tkugc/QnHKzMR6r8S/1zs0yKa5,iv:MPQg77KEoY8JYBjmWGT33dl7k2BZopOSnDrT6ef7iOk=,tag:Xp4fXWGKX9e6NoWN20031Q==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:QseWD8OGAJhAn1maht3JPFb1bF62oEwQ,iv:bp9vWOL/A6SBJ7isX9hpHZrFnGAQ7ZZ0LVeaNLTRNvA=,tag:J+nzi9aFydyGdAp/KpwF/Q==,type:str]
+    #ENC[AES256_GCM,data:eOGaJUFqTL6W8WaKWWJpnB7SVR2F8H2gOO4=,iv:nipG5DpyWMQLW9GA/9fyoEiD2hci6l3erCJBBJr0xzo=,tag:at7COuA3l9m1vYOcTTBR0A==,type:comment]
+    N8N_ENCRYPTION_KEY: ENC[AES256_GCM,data:8Hz6HV6LBZ7Fqgl4YExjkRViQeB+cSx4,iv:j3NeiOH3r/O9jLNeNHx1l9WFA58mZZK7z5heGEhchQw=,tag:rzRXHKIJJvrrFuaXtp7Saw==,type:str]
+    N8N_USER_MANAGEMENT_JWT_SECRET: ENC[AES256_GCM,data:GJFADOyOnAoFqt+IGu7oWJfdQJZ1y/ZO,iv:McGE49G18RDsTjRMCzRi+A8LYsOPgsbZi3Ms9yl7oGU=,tag:ATEAPndWAe0CqtgvN7D6GA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:HC4SSOnBkJtfKb5gyuJFy9Gsngvp9zYL,iv:YknMuU73nPDavuAcb3JZA1poejP2p14SiPdfs46rqco=,tag:RdkbxTHPDajncwLAYCn3kw==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-01-20T15:32:22Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFOztc3quDgji2MWomcOQinAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMZ8Di4ngUZtee0IItAgEQgDuP0dT1rinoae4FNYdTRS4SI4VbzYJIr3KmZG5vCHsj4v6a2SgU4GGxod5B3P8LKFrHm3Y5e4eDAk59Gw==
+          created_at: "2025-02-09T17:30:41Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAFF0F0SIsr6uhI6kPqwb6BMAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMjcAe80tToHFy23ulAgEQgDt8WM+4CcH800gBPDuaPtasXOyjhP8KPKPTvVOat5TapQL5u2HSw5BY0YB5nI0JNCyFXQXHctnBnEKBvg==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-01-20T15:32:22Z"
-    mac: ENC[AES256_GCM,data:nBnmTfL76bgj5lXEFJBM1JuSwXGS9SWvjajDrzzH9U6wxrWzgwDSaADkIXcNlVixatln9PWqaadZD0TZoCQ2x1EnAAua21A0Kpfg4sIbrOqNPHiFblnxYoT15WmNTYtXVUaT3iLxJmT8Gw3EoxcJDwQkQTSya40LlTch9/3HrII=,iv:jASHD9Z/LPqFtmXKoIcHfOmbl9MOQWQvkp0dmVc/0LI=,tag:sGdcL0VaiSTA2sh+4a69Kg==,type:str]
+    lastmodified: "2025-02-09T17:30:41Z"
+    mac: ENC[AES256_GCM,data:PLZuc2TAW5H1oMCzpYwCNBCDN6xrfFQ3ekcxko1+VngZcH9Fwj3+o8bP/u8PbMeU8eAi2UKpYqCmLZezxUiBSQrKGZJxmvO7oWFO70vwokEgf1Asdv8wdP3bVUHhPRfBB1c75aAgrGcr69usqKD9NQnYRJQVewy78AVD5ruGEso=,iv:EYupv7xkPZCxddtE9fl/Q7B7nb29QT2UIaALJ3KHjis=,tag:bkU4okp/BuGK7CMRYMXQ+A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
