--- a/platform/ai/k8s/crawler/service.yaml
+++ b/platform/ai/k8s/crawler/service.yaml
@@ -2,14 +2,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ollama
+  name: crawl4ai
   namespace: ai
 spec:
   type: ClusterIP
   selector:
-    name: ollama
+    name: crawl4ai
   ports:
-  - port: 11434
+  - port: 11235
     name: http
     targetPort: http
     protocol: TCP
