--- a/platform/ai/k8s/kustomization.yaml
+++ b/platform/ai/k8s/kustomization.yaml
@@ -1,11 +1,10 @@
 ---
-apiVersion: 
+apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: ai
 resources:
   - namespace.yaml
-  - secrets.sops.yaml
-  - ollama
+  # - crawler
 helmCharts:
   - name: open-webui
     repo: https://helm.openwebui.com/
