--- a/platform/ai/k8s/patch-test-connection.yaml
+++ b/platform/ai/k8s/patch-test-connection.yaml
@@ -5,19 +5,12 @@ metadata:
   name: ollama-test-connection
   namespace: ai
 spec:
-  affinity:
-    nodeAffinity:
-      requiredDuringSchedulingIgnoredDuringExecution:
-        nodeSelectorTerms:
-          - matchExpressions:
-              - key: feature.node.kubernetes.io/pci-0300_10de.present
-                operator: In
-                values:
-                  - "true"
+  nodeSelector:
+    kubernetes.io/hostname: mlops-work-00
   containers:
     - name: wget
       securityContext:
-        runAsUser: 1000
+        runAsUser: 1001
         runAsNonRoot: true
         privileged: false
         allowPrivilegeEscalation: false
