--- a/kubernetes/helmfile.d/03-devices.gotmpl.yaml
+++ b/kubernetes/helmfile.d/03-devices.gotmpl.yaml
@@ -28,3 +28,11 @@ releases:
           enabled: true
         nfd:
           enabled: false
+    hooks:
+      - events: ["presync"]
+        showlogs: true
+        command: "bash"
+        args:
+          - -c
+          - |
+            kustomize build ../apps/kube-system/nvidia | kubectl apply -f -
