--- a/kubernetes/Taskfile.yml
+++ b/kubernetes/Taskfile.yml
@@ -1,3 +1,4 @@
+---
 version: 3
 
 includes:
@@ -34,3 +35,14 @@ tasks:
     dir: kubernetes
     cmds:
       - task: talos:reboot-node
+  
+  cluster-health:
+    dir: kubernetes
+    cmds:
+      - |
+        until kubectl get nodes --no-headers | awk '{print $2}' | grep -q "NotReady"; do
+          echo "Waiting for Kubernetes cluster to become healthy..."
+          sleep 10
+        done
+        echo "Kubernetes cluster is healthy!"
+  
