--- a/platform/ai/k8s/openwebui-values.yaml
+++ b/platform/ai/k8s/openwebui-values.yaml
@@ -70,12 +70,24 @@ extraEnvVars:
     value: http://ollama.ai.svc.cluster.local:11434
   - name: OLLAMA_BASE_URL
     value: http://ollama.ai.svc.cluster.local:11434
+  - name: ENABLE_RAG_WEB_SEARCH
+    value: "True"
   - name: SEARXNG_QUERY_URL
     value: "http://searxng.ai.svc.cluster.local:8080/search?q=<query>"
-  - name: ENABLE_OPENAI_API
-    value: "false"
-  - name: OPENAI_API_KEY
+  - name: RAG_WEB_SEARCH_ENGINE
+    value: "searxng"
+  - name: STORAGE_PROVIDER
+    value: s3
+  - name: S3_BUCKET_NAME
+    value: openwebui
+  - name: S3_ACCESS_KEY_ID
     valueFrom:
       secretKeyRef:
-        name: ai-credentials
-        key: OPENAI_API_KEY
+        name: aws-credentials
+        value: AWS_ACCESS_KEY_ID
+  - name: S3_SECRET_ACCESS_KEY
+    valueFrom:
+      secretKeyRef:
+        name: aws-credentials
+        value: AWS_SECRET_ACCESS_KEY
+  
