--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -21,8 +21,26 @@ tasks:
   cluster-up:
     cmds:
       - task: kubernetes:provision-cluster
+      - task: kubernetes:cluster-health
+        vars: { CONTROL_PLANE: $MASTER_NODE_IP}
       - task: kubernetes:bootstrap-cluster
       - task: kubernetes:sync-cluster
+
+  portainer-up:
+      dir: terraform
+      cmds:
+        - |-
+          tofu init --upgrade
+        - |-
+          tofu plan \
+            -var portainer_ip=$PORTAINER_IP \
+            -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
+            -var portainer_password=$PORTAINER_PASSWORD
+        - |-
+          tofu apply -auto-approve \
+            -var portainer_ip=$PORTAINER_IP \
+            -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
+            -var portainer_password=$PORTAINER_PASSWORD
 
   compose-up-*:
     summary: Used for launching docker compose stacks.
