--- a/kubernetes/helmfile.d/03-devices.gotmpl.yaml
+++ b/kubernetes/helmfile.d/03-devices.gotmpl.yaml
@@ -7,6 +7,8 @@ repositories:
     url: https://kubernetes-sigs.github.io/node-feature-discovery/charts
   - name: nvidia
     url: https://nvidia.github.io/k8s-device-plugin
+  - name: gpu-helm-charts
+    url: https://nvidia.github.io/dcgm-exporter/helm-charts
 
 releases:
   - name: node-feature-discovery
@@ -35,4 +37,8 @@ releases:
         args:
           - -c
           - |
-            kustomize build ../apps/kube-system/nvidia | kubectl apply -f -
+            kustomize build ../apps/hardware/nvidia | kubectl apply -f -
+
+  - name: dcgm-exporter
+    chart: gpu-helm-charts/dcgm-exporter
+    namespace: kube-system
