--- a/platform/automation/k8s/n8n/deployment.yaml
+++ b/platform/automation/k8s/n8n/deployment.yaml
@@ -64,11 +64,31 @@ spec:
           env:
             - name: N8N_SECURE_COOKIE
               value: "false"
-            # - name: N8N_EXTERNAL_STORAGE_S3_HOST
-            # - name: N8N_EXTERNAL_STORAGE_S3_BUCKET_REGION
-            # - name: N8N_EXTERNAL_STORAGE_S3_BUCKET_NAME
-            # - name: N8N_EXTERNAL_STORAGE_S3_ACCESS_KEY
-            # - name: N8N_EXTERNAL_STORAGE_S3_ACCESS_SECRET
+            - name: N8N_DIAGNOSTICS_ENABLED
+              value: "false"
+            - name: N8N_ONBOARDING_FLOW_DISABLED
+              value: "true"
+            - name: N8N_VERSION_NOTIFICATIONS_ENABLED
+              value: "false"
+            - name: N8N_EXTERNAL_STORAGE_HOST
+              value: "s3.us-east-1.amazonaws.com"
+            - name: N8N_EXTERNAL_STORAGE_S3_BUCKET_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: aws_homelab_remote_state_backup
+            - name: N8N_EXTERNAL_STORAGE_S3_BUCKET_REGION
+              value: "us-east-1"
+            - name: N8N_EXTERNAL_STORAGE_S3_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: aws_access_key_id
+            - name: N8N_EXTERNAL_STORAGE_S3_ACCESS_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: aws_secret_access_key
 
           volumeMounts:
             - name: credentials
