--- a/.github/workflows/deploy-release.yaml
+++ b/.github/workflows/deploy-release.yaml
@@ -29,7 +29,7 @@ jobs:
 
   deploy-docs:
     name: Deploy Docs
-    needs: build
+    needs: build-docs
     permissions:
       pages: write
       id-token: write 
