--- a/kubernetes/apps/security/cert-manager/kustomization.yaml
+++ b/kubernetes/apps/security/cert-manager/kustomization.yaml
@@ -2,4 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: cert-manager
 resources:
-  - cluster-issuer.yaml
+  - self-signed-cluster-issuer.yaml
+  - internal-ca-certificate.yaml
+  - internal-ca-issuer.yaml
