--- a/platform/automation/k8s/n8n/kustomization.yaml
+++ b/platform/automation/k8s/n8n/kustomization.yaml
@@ -7,9 +7,7 @@ resources:
   - service.yaml
   - configmap.yaml
   - pvc.yaml
-  # - workflows-pvc.yaml
-  # - gateway.yaml
-  # - http-route.yaml
+  - ingress.yaml
 
 configMapGenerator:
   - name: workflows-cm
