--- a/platform/ai/k8s/secret.sops.yaml
+++ b/platform/ai/k8s/secret.sops.yaml
@@ -4,21 +4,22 @@ metadata:
     name: openwebui-secrets
     namespace: ai
 stringData:
-    webui_secret: ENC[AES256_GCM,data:M33jmBSHPJBvfmK3LET4hzzDu8F/VIkHr+sI37A=,iv:zDmbfy0cQ7D1X0ZTr6y5yn5Jzr/JBNqUIKMukQW2ofU=,tag:1LjCU7SP8lLvjUDsnk3yYA==,type:str]
-    github_token: ENC[AES256_GCM,data:EcfKQQiv0qoZh5euTXsEPVtyxbryZSYoBQzz8E0elUqfKKY8cHB0Cg==,iv:tG627DJcrLMKnEqvsb7mmUR3PNJ1hdbDtFJZ9DslDvo=,tag:9SmsbJbRvO4KGdRZSNxZBg==,type:str]
-    n8n_api_key: ENC[AES256_GCM,data:rUxjeIpfJaLm3FAQ1gl9vywonJVHa4cKglHiLwbbbA2NkRY/MG9OWdV2ADVV6jiuG+j80nJAO52Paw/TNJiOGRMtYFLaqtgg8svt+CUeActTu2SotfqFE74PaOlgO09ollPbmeRiy3AUHKzwb4gMFsTZCWEblGBUwl+L7K24DJdesZl7jCZqbKeyiS3Z3e4ST7i1koClZbyO6WSH3CHvzhK2CA8ciyw2X4xx9ggvJffQW7hCiNxwDDbWWzGGVL9eCg/Itqgle7cmKbYagdZB,iv:xgZ0yJVEkXliTxAkcZgwHp4PmATXQnanLBsnVXJRYkM=,tag:MrLi/kFroHIAwl/AUK+b7Q==,type:str]
+    webui_secret: ENC[AES256_GCM,data:O5xz2gJuRBRLJwhXcHez48u5FaLw3atyp83HVC4=,iv:1h130Iwe/mW5h5etquq+IelH295PX5hVGWqUTw+E8QQ=,tag:kRiF/+hiqMRjTlJQz3lHEw==,type:str]
+    webui_api_key: ENC[AES256_GCM,data:CGypBhyQsdYq+Auea2QHchH24KBYrDJxeV4BEFX4dJpTS7Q=,iv:f3RasSrmVRxzbWEEiSGtLXGoRaKH5ABHtLbrao4w0tc=,tag:+xAUVdhgsT8m8tcpe53SOA==,type:str]
+    github_token: ENC[AES256_GCM,data:xyR/+yjHoRo/sgyFNa96/htjZjE1hbIVTc+sDHT9u7fLo/Bf75tE+Q==,iv:Qb1doll3GjzTFFB8VESOHamFI3r8V+1zVhwT3m2vimo=,tag:6jttiP86d+tw79uCM8rxqQ==,type:str]
+    n8n_api_key: ENC[AES256_GCM,data:AT0Lhbt9nacoAFQbwnmoRw1GAOEkAnmR0Qn8Bcq4CNnEnLQqjGODzOE2vUPL+50xEaa9rQrONlGvk0keEhc8sdu6lLbjpWMzntC/WtYVEN+VI0UZZ3ZK0Ez5rBL7TzTvBz5v8164ANC6pfvF9Gfj5nv9iXXmDQ0oqaE2JnlmuBvDI572/SaVW1967mZagQHuwQeqJFpvyAPSf2jiJiSDlXXhUS4wrCg0d4ma2EZr2LiF8PT8Uwpieg5Ilf330a63FHmYN1vdqtWgHHe+qtmF,iv:0og7N4iHT6lZtl/Vhn//8w8jblmofsISEMvQqRylj9Y=,tag:pSeZFjntXVSQ4ofR3MyNvg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-east-1:626956831217:key/f22ea8b8-ec28-4d80-988e-7372419dbc28
-          created_at: "2025-02-17T21:31:51Z"
-          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAG+YW/kkde8eEEqwirdCIwLAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMOOQkWvNS/Pz4Yv8qAgEQgDvWxD+ysovN027HT7mbVLhRrSIpZMaZxW+bcTUjjPGVnsk1l1cxiVQRGtUCxOOeAlXFg85062+NMlOQTQ==
+          created_at: "2025-02-20T16:04:47Z"
+          enc: AQICAHgf2Bz/yC/N+d80dqtXyzpCypiaZx1Lgwl8YcJR1TYnOAHFzy+KsN078MLmWZFTDXrrAAAAfjB8BgkqhkiG9w0BBwagbzBtAgEAMGgGCSqGSIb3DQEHATAeBglghkgBZQMEAS4wEQQMKKpM/qWEVnTVz8THAgEQgDuZ5KkDll6otgLHs5SPtLE+m+uOrbWwLO9IrYO7zru8SHGkqe05mvSeh92N71lci8DTVdCyDfbyNjkorg==
           aws_profile: ""
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-02-17T21:31:51Z"
-    mac: ENC[AES256_GCM,data:/xfb18C2IS7Ug9WOdxeNQXziTqVLrKkrlhgfRr2UX0jX+26NWdP8K5wF0xSEI0DjKHJVOTiQn3iE1JAnmwKycxwvvSjJAK+tXDit907uZtswUz2QzRhAx6HgyE/wwDjJ8Hm83xvtw76s9+TguCHhwcO/bc7D+2kWpfmYQVhUm/0=,iv:WOdT0/Lhh91TPxKMJxrh5UQpiMPp7TVCuDfICL8J77A=,tag:xxkitx9sA97UpjUQcK6dJQ==,type:str]
+    lastmodified: "2025-02-20T16:04:47Z"
+    mac: ENC[AES256_GCM,data:Xvh1VHn8q5NpobFdaxUjeqfMG/zGBgmFNsqtupGbup3pj3YWDMhv3dkCSf4rvzFojdZC93WJ/Ep69/DM5Hbu5fbp/t17lBKHk0tXY+1ET7S+BqqzDbeELLStlSd4+9y+n1B3rUbLfX3VNp8Grt9T9uP9aq5+tvT5I87oWN42VGw=,iv:U01OjOu5SJwbnk8b+MQhQ3k2NuUk14owwc9CuuNxOCQ=,tag:flkAzcODAZtfApQCvtxQdQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
