--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -41,11 +41,19 @@ tasks:
           tofu init --upgrade
         - |-
           tofu plan \
+            -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
+            -var proxmox_username=$PROXMOX_USERNAME \
+            -var proxmox_password=$PROXMOX_PASSWORD \
+            -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
             -var portainer_ip=$PORTAINER_IP \
             -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
             -var portainer_password=$PORTAINER_PASSWORD
         - |-
           tofu apply -auto-approve \
+            -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
+            -var proxmox_username=$PROXMOX_USERNAME \
+            -var proxmox_password=$PROXMOX_PASSWORD \
+            -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
             -var portainer_ip=$PORTAINER_IP \
             -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
             -var portainer_password=$PORTAINER_PASSWORD
@@ -55,6 +63,10 @@ tasks:
       cmds:
         - |-
           tofu destroy -auto-approve \
+            -var proxmox_server_ip=$PROXMOX_NODE_ONE_IP \
+            -var proxmox_username=$PROXMOX_USERNAME \
+            -var proxmox_password=$PROXMOX_PASSWORD \
+            -var proxmox_ssh_private_key=$PROXMOX_NODE_ONE_PRIVATE_KEY \
             -var portainer_ip=$PORTAINER_IP \
             -var network_gateway=$PROXMOX_NETWORK_GATEWAY \
             -var portainer_password=$PORTAINER_PASSWORD
