--- a/kubernetes/apps/networking/cilium/gateway.yaml
+++ b/kubernetes/apps/networking/cilium/gateway.yaml
@@ -2,25 +2,23 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: tls-gateway
+  name: homelab-gateway
   annotations:
-    
+    cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
+    external-dns.alpha.kubernetes.io/hostname: "homelab.local,*.homelab.local"
 spec:
   gatewayClassName: cilium
   listeners:
-  - name: https-1
+  - name: http
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: All
+  - name: https
     protocol: HTTPS
     port: 443
-    hostname: "homelab.local"
     tls:
+      mode: Terminate
       certificateRefs:
-      - kind: Secret
-        name: ca
-  - name: https-2
-    protocol: HTTPS
-    port: 443
-    hostname: "hipstershop.cilium.rocks"
-    tls:
-      certificateRefs:
-      - kind: Secret
-        name: ca
+      - name: homelab-tls
