--- a/platform/automation/k8s/n8n/kustomization.yaml
+++ b/platform/automation/k8s/n8n/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - service.yaml
   - configmap.yaml
   - pvc.yaml
-  - ingress.yaml
+  - httproute.yaml
 
 configMapGenerator:
   - name: workflows-cm
