--- a/platform/automation/k8s/n8n/service.yaml
+++ b/platform/automation/k8s/n8n/service.yaml
@@ -3,20 +3,11 @@ kind: Service
 metadata:
   name: n8n-service
   namespace: automation
-  labels:
-    version: v1.0
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: n8n.homelab.local
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: n8n
   ports:
-  - port: 80
-    name: http
-    protocol: TCP
+  - port: 5678
     targetPort: 5678
-  - port: 443
-    name: https
     protocol: TCP
-    targetPort: 5678
