--- a/platform/observability/compose.yaml
+++ b/platform/observability/compose.yaml
@@ -1,4 +1,15 @@
 services:
+  loki:
+    container_name: loki
+    image: grafana/loki:3.4.2
+    restart: unless-stopped
+    command: "-config.file=/etc/loki/config.yaml"
+    ports:
+      - 3100:3100
+    volumes:
+      - ./config/config.yaml:/etc/loki/config.yaml:ro
+      - data_loki:/loki:rw
+
   influxdb2:
     image: influxdb:2
     ports:
@@ -45,3 +56,5 @@ secrets:
 volumes:
   influxdb2-data:
   influxdb2-config:
+  data_loki:
+    driver: local
