--- a/kubernetes/Taskfile.yml
+++ b/kubernetes/Taskfile.yml
@@ -5,15 +5,37 @@ includes:
   talos:
     taskfile: ".taskfiles/talos/Taskfile.yaml"
 
+vars:
+  TERRAFORM: tofu -chdir=terraform
+
 tasks:
   provision-cluster:
     dir: kubernetes
+    env:
+      PROXMOX_VE_USERNAME: "{{.PROXMOX_USERNAME}}"
+      PROXMOX_VE_PASSWORD: "{{.PROXMOX_PASSWORD}}"
+      PROXMOX_VE_ENDPOINT: "https://{{.PROXMOX_NODE_TWO_IP}}:8006"
+      PROXMOX_VE_API_TOKEN: "{{.PROXMOX_NODE_TWO_API_TOKEN}}"
+      PROXMOX_SSH_PRIVATE_KEY: "{{.PROXMOX_NODE_ONE_PRIVATE_KEY}}"
     cmds:
-      - |
-        if [ -f ../.envrc ]; then
-          source ../.envrc
-        fi
-      - make tf_run
+      - |-
+        {{.TERRAFORM}} init --upgrade
+      - |-
+        {{.TERRAFORM}} plan \
+          -var k8s_api_server_ip=${MASTER_NODE_IP} \
+          -var network_gateway=${PROXMOX_NETWORK_GATEWAY} \
+          -var master_node_ip=${MASTER_NODE_IP} \
+          -var worker_one_node_ip=${WORKER_00_NODE_IP} \
+          -var worker_two_node_ip=${WORKER_01_NODE_IP} \
+          -var proxmox_ssh_private_key=${PROXMOX_SSH_PRIVATE_KEY}
+      - |-
+        {{.TERRAFORM}} apply -auto-approve \
+          -var k8s_api_server_ip=${MASTER_NODE_IP} \
+          -var network_gateway=${PROXMOX_NETWORK_GATEWAY} \
+          -var master_node_ip=${MASTER_NODE_IP} \
+          -var worker_one_node_ip=${WORKER_00_NODE_IP} \
+          -var worker_two_node_ip=${WORKER_01_NODE_IP} \
+          -var proxmox_ssh_private_key=${PROXMOX_SSH_PRIVATE_KEY}
 
   bootstrap-cluster:
     dir: kubernetes
