--- a/.github/workflows/deploy-release.yaml
+++ b/.github/workflows/deploy-release.yaml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
   build-docs:
@@ -19,9 +20,9 @@ jobs:
           node-version: 18
           cache: yarn
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn --cwd docs install --frozen-lockfile
       - name: Build website
-        run: yarn build docs
+        run: yarn --cwd docs build
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
