--- a/.github/workflows/deploy-release.yaml
+++ b/.github/workflows/deploy-release.yaml
@@ -15,14 +15,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          path: docs
       - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
       - name: Install dependencies
-        run: yarn --cwd docs install --frozen-lockfile
+        run: yarn install --frozen-lockfile
       - name: Build website
-        run: yarn --cwd docs build
+        run: yarn build
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
