--- a/.github/workflows/deploy-release.yaml
+++ b/.github/workflows/deploy-release.yaml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build-docs:
@@ -15,15 +14,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          path: docs
       - uses: actions/setup-node@v4
         with:
           node-version: 18
           cache: yarn
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: yarn install
       - name: Build website
-        run: yarn build
+        run: yarn build docs
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
