--- a/.github/workflows/deploy-release.yaml
+++ b/.github/workflows/deploy-release.yaml
@@ -15,14 +15,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          path: docs
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: yarn
       - name: Install dependencies
-        run: yarn install
+        run: npm install
       - name: Build website
-        run: yarn build docs
+        run: npm run build
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
