--- a/.github/workflows/deploy-release.yaml
+++ b/.github/workflows/deploy-release.yaml
@@ -15,14 +15,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          path: docs
       - uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: Install dependencies
-        run: npm install
+        run: npm install --prefix docs
       - name: Build website
-        run: npm run build
+        run: npm run build --prefix docs
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
