--- a/kubernetes/apps/networking/cilium/gateway.yaml
+++ b/kubernetes/apps/networking/cilium/gateway.yaml
@@ -3,11 +3,14 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: homelab-gateway
-  annotations:
-    cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
-    external-dns.alpha.kubernetes.io/hostname: "homelab.local,*.homelab.local"
+  # annotations:
+  #   cert-manager.io/cluster-issuer: internal-ca-cluster-issuer
+  #   external-dns.alpha.kubernetes.io/hostname: "homelab.local,*.homelab.local"
 spec:
   gatewayClassName: cilium
+  infrastructure:
+    annotations:
+      io.cilium/lb-ipam-ips: 192.168.2.220
   listeners:
   - name: http
     protocol: HTTP
@@ -15,10 +18,14 @@ spec:
     allowedRoutes:
       namespaces:
         from: All
-  - name: https
+  - name: https-gateway
+    hostname: "*.homelab.local"
     protocol: HTTPS
     port: 443
     tls:
-      mode: Terminate
       certificateRefs:
-      - name: homelab-tls
+      - kind: Secret
+        name: homelab-tls
+    allowedRoutes:
+      namespaces:
+        from: All
