--- a/kubernetes/helmfile.d/02-core.gotmpl.yaml
+++ b/kubernetes/helmfile.d/02-core.gotmpl.yaml
@@ -59,3 +59,9 @@ releases:
           - -c
           - |
             kustomize build ../apps/security/cert-manager | kubectl apply -f -
+
+  - name: platform-gateway
+    chart: ../charts/platform
+    needs:
+      - external-dns/external-dns
+      - cert-manager/cert-manager
